--- a/src/main/webapp/css/suiteView.css
+++ b/src/main/webapp/css/suiteView.css
@@ -36,6 +36,10 @@ td.subRow2Padding {
 	padding-left: 4.5em
 }
 
-td {
+.suiteView td {
 	height: 4em;
+}
+
+.suiteView button{
+	margin: 0 0.3em 0.3em 0;
 }
